# TgNeuroBot

./: .env_example  README.md  config.py  main.py  pyproject.toml
src/handlers/: chatgpt.py  replicate.py  start.py
src/keyboards/: inline.py  reply.py
src/service/: chatgpt.py  replicate.py
