[tool.poetry]
name = "tgneurobot"
version = "0.1.0"
description = ""
authors = ["Mihail <Misha200417@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
aiogram = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
